[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/platform/platform.png" type="Texture" id=1]
[ext_resource path="res://Scripts/platform/Platform.gd" type="Script" id=2]
[ext_resource path="res://Assets/platform/platform-espinhos.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 299.771, 15.1341 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "normal",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "thorns",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 233.518, 15.2545 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 29.9609, 15.1627 )

[node name="Platform" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -185 )
frames = SubResource( 2 )
animation = "normal"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.98425, 0 )
shape = SubResource( 3 )

[node name="Thorn1" type="CollisionShape2D" parent="."]
position = Vector2( -270.837, 0 )
shape = SubResource( 4 )

[node name="Thorn2" type="CollisionShape2D" parent="."]
position = Vector2( 268.446, -0.0834274 )
shape = SubResource( 4 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
